zzK3s/app1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-app1-deployment
  labels:
    app: golang-app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: golang-app1
  template:
    metadata:
      labels:
        app: golang-app1
    spec:
      containers:
      - name: golang
        image: cadugrillo/golang-app1:2.0
        ports:
        - containerPort: 4300
---
apiVersion: v1
kind: Service
metadata:
  name: golang
spec:
  selector:
    app: golang-app1
  ports:
    - protocol: TCP
      port: 4300
      targetPort: 4300
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app1-deployment
  labels:
    app: angular-app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: angular-app1
  template:
    metadata:
      labels:
        app: angular-app1
    spec:
      containers:
      - name: angular
        image: cadugrillo/angular-app1:2.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  selector:
    app: angular-app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
